# Husky_ML

./: CMakeLists.txt  CMakeLists_BKU.txt  README.md  package.xml  setup.py
cpr_gleason_gazebo/: CMakeLists.txt  package.xml
cpr_gleason_gazebo/launch/: gleason_world.launch  view_gleason_world.launch
cpr_gleason_gazebo/meshes/: test.blend  test.blend1  test.dae  test_2.dae  test_3.dae  test_bku.dae  test_working.dae
cpr_gleason_gazebo/urdf/: gleason_geometry.urdf.xacro
launch/: Leydon_husky.launch  Leydon_husky_SAC.launch  Leydon_husky_publisher.launch
nodes/: Husky_SAC_node  Husky_dqn  Husky_dqn.py  Husky_publisher
src/HUSKY_RL/: Husky_ENV.py  Husky_Memory.py  Husky_Networks.py  Husky_RNDUtils.py  SAC_Husky.py  graphsforrnd.py  husky.py  readme.txt  respawnGoal.py
src/HUSKY_RL/cpr_gleason_gazebo/: model.config
src/HUSKY_RL/cpr_gleason_gazebo/meshes/: gleason.dae
src/HUSKY_RL/cpr_gleason_gazebo/rviz/: world.rviz
src/HUSKY_RL/nodes/: Husky_SAC_node  Husky_publisher
src/HUSKY_RL/src/HUSKY_RL/: Husky_ENV.py  Husky_Memory.py  Husky_Networks.py  Husky_RNDUtils.py  SAC_Husky.py  respawnGoal.py
